--- a/stylesheet.css
+++ b/stylesheet.css
@@ -23,17 +23,17 @@ body {
 }
 
 .dates {
+	color: #4d4d4d;
 	font-size: 50px;
 	font-weight: 300;
 	margin: 30px 0 30px 0;
 }
 
 .social {
-
 	position: absolute;
 	bottom: 0;
 	left: 0;
-
+	margin: 10px;
 }
 
 .social img, .tesc img {
@@ -45,4 +45,5 @@ body {
 	position: absolute;
 	bottom: 0;
 	right: 0;
+	margin: 10px;
 }
