--- a/stylesheet.css
+++ b/stylesheet.css
@@ -27,52 +27,68 @@ body {
 	width: 100vw;
 	height: 100vh;
 	overflow-y: hidden;
-	z-index: -10;  }
+	z-index: -10; }
 
 	.splash-bg * {
 		z-index: -5;
-		position: absolute;  }
+		position: absolute; }
 	.island {
 		top: 6vh;
-		left: -4vw;  }
-
+		left: -4vw; }
 		/* Get rid of tree and boat for mobile */
 		.palm-tree {
-			height: 68vh;  }
+			height: 68vh; }
 		.sand {
 			height: 35vh;
-			top: 62vh;  }
-
-	.waves {
+			top: 62vh; }
+	.ocean {
 		height: 22vh;
-		bottom: -3vh;
-	}
-	.waves>.wave {
+		bottom: -3vh; }
+	.ocean>.wave {
 		position: relative;
 		width: 100vw;
 		height: 6.25vh;
-		margin-top: -1.75vh;
-	}
+		margin-top: -1.75vh; }
+	.ocean>#boat {
+		z-index: -6;
+		position: absolute;
+		top: -180px;
+		right: 18vw;
+		width: 100px; }
+		#boat>#sail-left {
+			background: url(assets/Boat-02.png);
+			width: 80px;
+			left: 15px;
+			height: 130px;
+			background-size: cover; }
+		#boat>#sail-right {
+			left: 105px;
+			top: 38px;
+		 	background: url(assets/Boat-03.png);
+		 	width: 55px;
+		 	height: 90px;
+		 	background-size: cover; }
+		#boat>#boat-body {
+			background: url(assets/Boat-04.png);
+			width: 180px;
+			height: 60px;
+			top: 120px;
+			background-size: cover; }
 	.wave#wave1 {
 		background: url(assets/Waves-02.png);
-	    background-size: auto 100%;
-	}
+	    background-size: auto 100%; }
 	.wave#wave2 {
 		background: url(assets/Waves-03.png);
-	    background-size: auto 100%;
-	}
+	    background-size: auto 100%; }
 	.wave#wave3 {
-		background: url(assets/Waves-04.png);
-	    background-size: auto 100%;
-	}
-	.wave#wave4 {
-		background: url(assets/Waves-05.png);
-	    background-size: auto 100%;
-	}
-	.wave#wave5 {
 		background: url(assets/Waves-01.png);
-	    background-size: auto 100%;
-	}
+	    background-size: auto 100%; }
+	.wave#wave4 {
+		background: url(assets/Waves-04.png);
+	    background-size: auto 100%; }
+	.wave#wave5 {
+		background: url(assets/Waves-05.png);
+	    background-size: auto 100%; }
 .logo {
 	padding-top: 10vh;
 	height: 250px;
