Absolutely positioned tree

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,4 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,200,300);
 
 body {
 	font-family: Source Sans Pro;
@@ -40,34 +40,76 @@ body {
 			height: 68vh; }
 
 		#palm-tree {
-			height: 68vh;	
+			/*left: 40vw;*/
+			width: 66.2vh;
+			height: 68vh;
 		}
+		#palm-tree>* {
+			z-index: -7;
+		}
+			/* Large palm tree dimensions: 2592 * 2660 */
+			/* Leaves ordered starting from 6 o'clock clockwise */
+			/*  W x H
+			/* Leaf1 -> 1188 x 963 */
 			.leaf#leaf1 {
+				top: 28%;
+				width: 45.8%;
+				height: 36.2%;
 				background: url(assets/PalmTree-06.png);
-
+				background-size: cover;
 			}
+			/* Leaf2 -> 1265 x 854 */
 			.leaf#leaf2 {
+				top: 6%;
+				width: 48.8%;
+				height: 32.1%;
 				background: url(assets/PalmTree-05.png);
-
+				background-size: cover;
 			}
+			/* Leaf3 -> 1188 x 963 */
 			.leaf#leaf3 {
+				left: 40%;
+				width: 45.8%;
+				height: 36.2%;
 				background: url(assets/PalmTree-04.png);
+				background-size: cover;
 			}
+			/* Leaf4 -> 1416 x 446 */
 			.leaf#leaf4 {
+				left: 45.5%;
+				top: 19%;
+				width: 54.6%;
+				height: 16.8%;
 				background: url(assets/PalmTree-03.png);
+				background-size: cover;
 			}
+			/* 237 x 237 */
 			.coconut#coconut1 {
-
+				left: 36%;
+				top: 33.6%;
+				width: 9.1%;
+				height: 9.1%;
+				background: url(assets/PalmTree-07.png);
+				background-size: cover;
 			}
+			/* 237 x 237 */
 			.coconut#coconut2 {
-				
+				left: 44%;
+				top: 30%;
+				width: 9.1%;
+				height: 9.1%;
+				background: url(assets/PalmTree-02.png);
+				background-size: cover;
 			}
+			/* 651 x 1771 */
 			#palm-tree>#trunk {
+				top: 32%;
+				left: 34.5%;
+				width: 26%;
+				height: 68%;
 				background: url(assets/PalmTree-01.png);
+				background-size: cover;
 			}
-
-
-
 		.sand {
 			height: 35vh;
 			top: 62vh; }
